--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="container-fluid">
   <div class="row">
-    <app-left-main style="background-color: blue;"></app-left-main>
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <app-movie-list></app-movie-list>
+    <div class="col-md-2">
+      <app-left-main style="background-color: blue;"></app-left-main>
+    </div>
+    <main role="main" class="col-md-10 overflow-auto">
+      <router-outlet></router-outlet>
     </main>
   </div>
 </div>
-
-
-
