--- a/src/app/left-main/left-main.component.css
+++ b/src/app/left-main/left-main.component.css
@@ -1,3 +1,11 @@
-.nav{
-  background-color: blue;
+nav{
+  background-color: #2087ff;
+  margin-left: -15px;
+  height: 100%;
 }
+
+nav a,
+.title{
+  color: white;
+}
+
