--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-3 col-lg-2">
       <app-left-main style="background-color: blue;"></app-left-main>
     </div>
-    <main role="main" class="col-md-10 overflow-auto">
+    <main role="main" class="col-md-9 col-lg-10 overflow-auto">
       <router-outlet></router-outlet>
     </main>
   </div>
