--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -13,7 +13,7 @@
       <div class="row" style="margin-top: 20px;">
         <div class="col-md-12">
           <div class="card">
-            <div class="card-body">
+            <div class="card-body table-responsive">
               <table class="table">
                 <thead>
                   <tr>
